If applied, this commit will fix linked scripts.js to index page.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-    <script scr="js/scripts.js"></script>
+    <script scr="scripts.js"></script>
   </body>
 </html>
